--- a/newbie/article-preview-component/styles/scss/main.scss
+++ b/newbie/article-preview-component/styles/scss/main.scss
@@ -125,6 +125,53 @@
 
         }
 
-    }
-}
+        .desktop-share {
+            position: absolute;
+            background-color: $Very-Dark-Grayish-Blue;
+            width: 180px;
+            height: 40px;
+            
+            display: none;
+            border-radius: 1rem;
+            z-index: 4;
 
+            
+
+            ul {
+                display: flex;
+                list-style: none;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+               
+                h2 {
+                    letter-spacing: $gap-1;
+                    color: $Grayish-Blue;
+                    font-weight: 700;
+                    font-size: 1.2rem;
+                    margin-right: $gap-2;
+                }
+        
+                li {
+                    padding: $gap-1;
+                }
+            }
+
+          
+    
+        }
+
+        .active {
+            display: block;
+            right: 270px;
+            top: 350px;
+            transition: all 0.4s ease-in-out;
+        }
+
+      
+        
+
+    }
+
+    
+}
