--- a/junior/advice-generator-app-main/styles/css/main.css
+++ b/junior/advice-generator-app-main/styles/css/main.css
@@ -91,6 +91,29 @@ body {
   opacity: 0.5;
 }
 
+.card section .advice-box .fade {
+  -webkit-animation: fadein 1s;
+          animation: fadein 1s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .card section .dice {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -107,5 +130,43 @@ body {
   height: 55px;
   position: relative;
   top: 45px;
+  cursor: pointer;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.card section .dice:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.card section .dice .active {
+  -webkit-transform: rotateZ(360deg);
+          transform: rotateZ(360deg);
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+@media only screen and (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  html {
+    font-size: 50.5%;
+  }
+}
+
+@media only screen and (max-width: 1366px) {
+  html {
+    font-size: 50%;
+  }
+  html .card section {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
