--- a/newbie/intro-component-with-signup-form-master/styles/css/main.css
+++ b/newbie/intro-component-with-signup-form-master/styles/css/main.css
@@ -32,14 +32,15 @@ html {
 }
 
 .container .card {
-  width: 80%;
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 70vh;
+  height: 80vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
 }
 
 .main-content {
@@ -75,6 +76,7 @@ aside {
 
 aside .trial {
   width: 80%;
+  z-index: 3;
   padding: 1.2rem;
   text-align: center;
   border-radius: 1.2rem;
@@ -84,6 +86,8 @@ aside .trial {
   color: #fff;
   -webkit-box-shadow: 0 0.4rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.4rem rgba(0, 0, 0, 0.2);
+  -webkit-animation: jump 3s ease-in-out infinite;
+          animation: jump 3s ease-in-out infinite;
 }
 
 aside .trial span {
@@ -110,11 +114,30 @@ aside form {
   border-radius: 1.2rem;
 }
 
+aside form .name i {
+  color: #ff7a7a;
+  position: relative;
+  top: -32px;
+  left: 360px;
+  display: none;
+}
+
+aside form .name .wrong-name {
+  font-weight: 600;
+  font-size: 0.8rem;
+  color: #ff7a7a;
+  position: relative;
+  left: 300px;
+  top: -10px;
+  display: none;
+}
+
 aside form input {
   padding: 1.2rem;
-  border: 0.1rem solid #b9b6d3;
   border-radius: 0.8rem;
   font-weight: 500;
+  border: 0.1rem solid #b9b6d3;
+  width: 100%;
 }
 
 aside form input:focus {
@@ -125,19 +148,149 @@ aside form input:focus {
 }
 
 aside form .submit {
+  margin-top: 1.2rem;
   background-color: #38cc8c;
   border-radius: .8rem;
   color: #fff;
   text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
+}
+
+aside form .submit:focus {
+  border: none;
+  color: #fff;
+  background-color: #38cc8c;
+}
+
+aside form .submit:hover {
+  background: #09e184;
 }
 
 aside form .agreement-term {
   font-size: 1rem;
   text-align: center;
+  margin-top: 1.2rem;
 }
 
 aside form .agreement-term span {
   color: #ff7a7a;
   font-weight: 600;
+}
+
+aside .popup {
+  background: #38cc8c;
+  padding: 1.6rem;
+  border-radius: 1.2rem;
+  font-size: 1.2rem;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  position: relative;
+  display: none;
+  left: 25%;
+  -webkit-animation: fadeIn 1s;
+          animation: fadeIn 1s;
+  opacity: 1;
+  margin-top: 1.2rem;
+}
+
+@-webkit-keyframes jump {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes jump {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 62%;
+  }
+  .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .card .main-content {
+    height: 30vh;
+    width: 100%;
+  }
+  .card .main-content h1 {
+    font-size: 2.4rem;
+  }
+  .card .main-content p {
+    font-size: 1.6rem;
+  }
+  .card .form-container {
+    width: 100%;
+    margin-top: 0.8rem;
+    height: 100%;
+  }
+  .card .form-container .trial {
+    padding: 2.4rem;
+    text-align: center;
+  }
+  .card .form-container form .name i {
+    left: 90px;
+  }
+  .card .form-container form .name .wrong-name {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    top: 1px;
+    left: 50px;
+    font-size: 1rem;
+    display: none;
+    margin-top: -5px;
+    margin-bottom: .8rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
