--- a/newbie/intro-component-with-signup-form-master/styles/scss/_aside.scss
+++ b/newbie/intro-component-with-signup-form-master/styles/scss/_aside.scss
@@ -8,6 +8,7 @@ aside {
     
     .trial {
         width: 80%;
+        z-index: 3;
         padding: 1.2rem;
         text-align: center;
         border-radius: 1.2rem;
@@ -17,6 +18,8 @@ aside {
         color: $white;
 
         box-shadow: 0 .4rem rgba(0, 0, 0, 0.2);
+
+        animation: jump 3s ease-in-out infinite;
 
         span {
             font-weight: 600;
@@ -35,41 +38,122 @@ aside {
         box-shadow: 0 .6rem rgba(0, 0, 0, 0.2);
         
         border-radius: 1.2rem;
+
+        .name {
+          
+            i {
+                color: $red;
+                position: relative;
+                top: -32px;
+                left: 360px;
+                display: none;
+            }
+    
+            .wrong-name {
+             font-weight: 600;
+             font-size: 0.8rem;
+              color: $red;
+               position: relative;
+               left: 300px;
+               top: -10px;
+               display: none;
+              
+            }
+        
+
+        }
+
     
 
         input {
             padding: 1.2rem;
-            border: .1rem solid $grayish-blue;
             border-radius: 0.8rem;
             font-weight: 500;
+            border: .1rem solid $grayish-blue;
+            width: 100%;
 
             &:focus {
              outline: none;
              border: $grayish-blue .2rem solid;
              color: $dark-blue;
              background: $white;
-        
+           
             }
            
         }
 
         .submit {
+            margin-top: 1.2rem;
             background-color: $button;
             border-radius: .8rem;
             color: $white;
             text-transform: uppercase;
+            border: none;
+            cursor: pointer;
+            transition: 0.8s;
+
+            &:focus {
+                border: none;
+                color: $white;
+                background-color: $button;
+            }
+
+            &:hover{
+                background: hsl(154, 92%, 46%);
+            }
         }
 
         .agreement-term {
             font-size: 1rem;
             text-align: center;
-            
+            margin-top: 1.2rem;
 
             span {
+                
                 color: $red;
                 font-weight: 600;
             }
         }
     }
 
+    .popup {
+        background: $button;
+        padding: 1.6rem;
+        border-radius: 1.2rem;
+        font-size: 1.2rem;
+        color: $white;
+        font-weight: 600;
+        text-transform: uppercase;
+
+        position: relative;
+        display: none;
+        left: 25%;
+
+        animation: fadeIn 1s;
+  	    opacity: 1;
+
+        margin-top: 1.2rem;
+    }
+
 }
+
+@keyframes jump {
+    0% {
+        transform: translateY(0px)
+    }
+    50% {
+        transform: translateY(-5px)
+    }
+    100% {
+        transform: translateY(0px)
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+       opacity: 1;
+    }
+  }
