--- a/newbie/intro-component-with-signup-form-master/styles/scss/_card.scss
+++ b/newbie/intro-component-with-signup-form-master/styles/scss/_card.scss
@@ -5,10 +5,12 @@
     width: 100vw;
     height: 100vh;
 
+
     .card {
-        width: 80%;
+        width: 90%;
         display: flex;
-        height: 70vh;
+        height: 80vh;
         align-items: center;
+        overflow: hidden;
     }
 }
