--- a/junior/blogr-landing-page-main/styles/scss/_container.scss
+++ b/junior/blogr-landing-page-main/styles/scss/_container.scss
@@ -9,6 +9,8 @@
     background-size: 130%;
     background-position: center;
 
+    height: 70vh;
+
     border-radius: 0 0 3.2rem 3.2rem;
     
     .main-page {
@@ -20,6 +22,6 @@
         align-items: center;
         
        
-   
+        
     }
 }
