--- a/junior/blogr-landing-page-main/styles/scss/_intro-section.scss
+++ b/junior/blogr-landing-page-main/styles/scss/_intro-section.scss
@@ -1,6 +1,6 @@
 @import '_mixins.scss';
 
-section {
+.intro-section {
    
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@ section {
     justify-content: center;
 
     width: 100%;
-    height: 100%;
+    height: 65vh;
 
     h1 {
         font-size: 4.2rem;
