--- a/junior/blogr-landing-page-main/styles/scss/main.scss
+++ b/junior/blogr-landing-page-main/styles/scss/main.scss
@@ -3,3 +3,8 @@
 @import '_container.scss';
 @import '_header.scss';
 @import '_intro-section.scss';
+@import '_information-section.scss';
+@import '_mobile-section.scss';
+@import '_desktop-section.scss';
+@import '_footer.scss';
+@import '_attribution.scss';
