--- a/junior/blogr-landing-page-main/styles/css/main.css
+++ b/junior/blogr-landing-page-main/styles/css/main.css
@@ -24,8 +24,24 @@ body {
   background-repeat: no-repeat;
   background-size: 130%;
   background-position: center;
-  height: 70vh;
+  height: 90vh;
   border-radius: 0 0 3.2rem 3.2rem;
+}
+
+@media only screen and (max-width: 375px) {
+  .container .container {
+    width: 1028px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .container .main-page {
@@ -54,7 +70,7 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  height: 30vh;
+  height: 10vh;
 }
 
 header nav {
@@ -419,6 +435,11 @@ header nav .header-right button:hover {
   font-weight: 600;
   font-size: 1.4rem;
   opacity: 0.7;
+}
+
+.footer-container .footer .footer-items ul li a {
+  text-decoration: none;
+  color: #c8c8cb;
 }
 
 .wrapper-att {
