--- a/junior/blogr-landing-page-main/styles/scss/_base.scss
+++ b/junior/blogr-landing-page-main/styles/scss/_base.scss
@@ -19,6 +19,12 @@ $light-red-gradient: hsl(353, 100%, 62%);
 $bg-dark-grey-blue:  hsl(237, 17%, 21%);
 $bg-dark-desaturated-blue: hsl(237, 23%, 32%);
 
+// Fonts
+
 $font-overpass: 'Overpass', sans-serif;
 
 $font-ubuntu: 'Ubuntu', sans-serif;
+
+// Media QUERIES
+$tablet: 768px;
+$mobile: 375px;
