--- a/junior/blogr-landing-page-main/styles/scss/components/_container.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_container.scss
@@ -1,7 +1,9 @@
+@import '../_responsive.scss';
+
 .container {
     display: grid;
     place-items: center;
-    
+
 
     background-color: $light-red-gradient;
     background-image: url('../../images/bg-pattern-intro-desktop.svg');
@@ -9,10 +11,12 @@
     background-size: 130%;
     background-position: center;
 
-    height: 70vh;
+    height: 90vh;
 
     border-radius: 0 0 3.2rem 3.2rem;
     
+    @include ResponsiveMobile;
+
     .main-page {
         width: 80%;
         height: 70vh;
