--- a/junior/blogr-landing-page-main/styles/scss/components/_footer.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_footer.scss
@@ -37,6 +37,11 @@
                     font-weight: 600;
                     font-size: 1.4rem;
                     opacity: 0.7;
+
+                    a {
+                        text-decoration: none;
+                        color: #c8c8cb;
+                    }
                 }
             }
         }
