--- a/junior/blogr-landing-page-main/styles/scss/components/_header.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_header.scss
@@ -1,4 +1,4 @@
-@import '_mixins.scss';
+@import '../_mixins.scss';
 
 header {
     display: flex;
@@ -6,7 +6,7 @@ header {
     justify-content: center;
 
     width: 100%;
-    height: 30vh;
+    height: 10vh;
 
  
 
