--- a/junior/blogr-landing-page-main/styles/scss/main.scss
+++ b/junior/blogr-landing-page-main/styles/scss/main.scss
@@ -1,10 +1,14 @@
 @import '_base.scss';
 @import '_reset.scss';
-@import '_container.scss';
-@import '_header.scss';
-@import '_intro-section.scss';
-@import '_information-section.scss';
-@import '_mobile-section.scss';
-@import '_desktop-section.scss';
-@import '_footer.scss';
-@import '_attribution.scss';
+@import '_responsive.scss';
+
+
+@import 'components/_container.scss';
+@import 'components/_header.scss';
+@import 'components/_intro-section.scss';
+@import 'components/_information-section.scss';
+@import 'components/_mobile-section.scss';
+@import 'components/_desktop-section.scss';
+@import 'components/_footer.scss';
+@import 'components/_attribution.scss';
+
