--- a/junior/blogr-landing-page-main/styles/scss/components/_header.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_header.scss
@@ -19,6 +19,7 @@ header {
         .header-left {
             display: flex;
             align-items: center;
+            justify-content: space-around;
             
             width: 50%;
             
@@ -27,7 +28,50 @@ header {
                 list-style: none;
                 margin-left: 4rem;
 
-                li {
+
+                    .popup-list {
+                        display: none;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        width: 120px;
+                        
+                        border-radius: 1.2rem;
+                        
+
+                        position: relative;
+                        top: 90px;
+                        right: 130px;
+                        background: $white;
+
+                        
+                     
+
+                        li {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 100%;
+                          
+                            padding: .8rem;
+                            
+
+                            span {
+                                color: black;
+                                font-size: 1.2rem;
+                                transition: ease-in 2s;
+
+                                &:hover {
+                                    color: $heading;
+                                    font-weight: 700;
+                                }
+                            }
+                            
+                        }
+                        
+                    }
+                
+
+                .menu-list {
                     margin-right: 1.6rem;
                     display: flex;
                     align-items: center;
@@ -38,6 +82,10 @@ header {
                         font-size: 1.4rem;
                         color: $white;
                         font-family: $font-ubuntu
+                    }
+
+                    img {
+                        cursor: pointer;
                     }
                 }
             }
