--- a/junior/blogr-landing-page-main/styles/scss/components/_footer.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_footer.scss
@@ -41,6 +41,10 @@
                     a {
                         text-decoration: none;
                         color: #c8c8cb;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
