--- a/junior/blogr-landing-page-main/styles/scss/components/_intro-section.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_intro-section.scss
@@ -27,6 +27,10 @@
 
     div {
         margin-top: 3.2rem;
+
+        .start {
+            @include whiteButton;
+        }
         button {
             @include mainButton;
         }
