--- a/junior/blogr-landing-page-main/styles/scss/_mixins.scss
+++ b/junior/blogr-landing-page-main/styles/scss/_mixins.scss
@@ -19,6 +19,27 @@
     }
 }
 
+@mixin whiteButton {
+    padding-top:1.2rem;
+    padding-bottom: 1.2rem;
+    padding-left: 2.8rem;
+    padding-right: 2.8rem;
+    color: $red;
+    background: $white;
+    font-family: $font-ubuntu;
+    font-weight: 600;
+
+    border: none;
+    transition: all .2s ease;
+    border-radius: 2.4rem;
+
+    &:hover {
+        background: $red-hover;
+        color: $white;    
+    }
+
+}
+
 @mixin informationSections {
 
     p {
