--- a/junior/blogr-landing-page-main/styles/scss/_responsive.scss
+++ b/junior/blogr-landing-page-main/styles/scss/_responsive.scss
@@ -3,13 +3,13 @@
    
     @media only screen and (max-width: $mobile){
    
-        .container {
-            width: 1028px;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-           
-        }
+        width: 700px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+
+        
     
     }
 }
