--- a/junior/blogr-landing-page-main/styles/scss/components/_attribution.scss
+++ b/junior/blogr-landing-page-main/styles/scss/components/_attribution.scss
@@ -1,18 +1,32 @@
 .wrapper-att {
-    display: grid;
-    place-items: center;
-    background-color: $light-red-gradient;
+  display: grid;
+  place-items: center;
+  background-color: $light-red-gradient;
 
-    height: 5vh;
+  height: 5vh;
 
-    .attribution {
-        color: $white;
+  .attribution {
+    color: $white;
 
+    a {
+      text-decoration: none;
+      color: $bg-dark-grey-blue;
+      font-weight: 600;
+      transition: .2s ease-in-out;
 
-        a {
-            text-decoration: none;
-            color: $bg-dark-grey-blue;
-            font-weight: 600;
-        }
+      &:hover {
+        animation: jump 1.2s;
+        color: white;
+      }
     }
+  }
+}
+
+@keyframes jump {
+  0% {
+    transform: translate(-50%, -50%) scale(1.25, 0.75);
+  }
+  50% {
+    transform: translate(-50%, -150%) scale(1, 1);
+  }
 }
